# foolhtml

./: .gitignore  Cargo.toml  README.md
foolhtml/: Cargo.toml
foolhtml/src/: lib.rs
foolhtml_derive/: Cargo.toml
foolhtml_derive/src/: lib.rs
foolhtml_shared/: Cargo.toml
foolhtml_shared/src/: lib.rs  renderer.rs  template_manager.rs  util.rs
foolhtml_shared/src/parser/: ast.rs  ast_types.rs  foolhtml.pest  mod.rs
slimr/: Cargo.toml
slimr/src/: lib.rs
slimr_derive/: Cargo.toml
slimr_derive/src/: lib.rs
slimr_shared/: Cargo.toml
slimr_shared/src/: template_manager.rs
slimr_shared/src/parser/: ast.rs  ast_types.rs
src/: lib.rs  renderer.rs  util.rs
src/parser/: ast.rs  data_structs.rs  foolhtml.pest  mod.rs
testing/: Cargo.toml
testing/tests/: test.rs
