[package]
name = "foolhtml"
version = "0.0.1"
authors = ["Jonas Peter <tech@fooltopia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foolhtml_shared = { path = "../foolhtml_shared" }
foolhtml_derive = { path = "../foolhtml_derive" }