[package]
name = "foolhtml_derive"
version = "0.0.1"
authors = ["Jonas Peter <tech@fooltopia.com>"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[dependencies]
foolhtml_shared = { path = "../foolhtml_shared", version = "*" }
syn = "1"
quote = "1"
proc-macro2 = "1"
